# advent-of-code

./: .gitignore  README.md  go.mod  go.sum  mise.toml
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml
.github/workflows/: ci.yml  go.yml
01/: main.go  part1.go  part2.go
02/: main_test.go
03/: main.go
04/: main.go  prompt.txt
05/: main.go
06/: main.go
07/: main.go  main_test.go  prompt.txt
08/: main.go  main_test.go
10/: main.go  prompt.txt
11/: main.go  prompt.txt
12/: main.go  main_test.go
13/: main.go  main_test.go  prompt.txt
14/: main.go
15/: main.go  main_test.go
16/: main.go  main_test.go
17/: main_test.go  prompt.txt
18/: main.go  main_test.go
19/: main.go  prompt.txt
20/: main.go
2015/: Cargo.toml  mise.toml
2015/src/: grids.rs  lib.rs
2016/: Cargo.toml
2024/: go.mod  mise.toml
2024/02/: main.go
2024/04/: main.go  main_test.go
2024/05/: main.go  main_test.go
2024/06/: main.go
2024/07/: main.go
2024/08/: main.go
2024/09/: main.go  main_test.go
2024/10/: main.go
2024/11/: main_test.go
2024/12/: main.go  main_test.go
2024/14/: main.go  main_test.go
2024/15/: main.go
2024/16/: main.go
2024/17/: main.go
2024/18/: main.go
2024/19/: main.go  main_test.go
2024/20/: main.go  main_test.go
2024/21/: main_test.go
2025/: .gitignore  Cargo.toml  mise.toml
2025/src/: grids.rs  lib.rs
2025/src/grids/: grid.rs
21/: main.go  main_test.go
22/: main_test.go
23/: main.go  main_test.go
24/: main.go  main_test.go
25/: main_test.go
githooks/: pre-commit  pre-push
(+8 files in other folders)
