[package]
name = "adv-code-2015"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
const_format = "0.2.35"
itertools = "0.14.0"
md5 = "0.8.0"
nom = "8.0.0"
rayon = "1.11.0"

[lints.clippy]
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
indexing_slicing = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
