[package]
name = "adv-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
const_format = "0.2.35"
itertools = "0.14.0"
nom = "8.0.0"
regex = "1.12.2"

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
